--- a/organizacoes/templates/organizacoes/documento_view.html
+++ b/organizacoes/templates/organizacoes/documento_view.html
@@ -6,6 +6,7 @@
 
 {% load static %}
 {% load get_field %}
+{% load linguas %}
 
 <style>
   .carregando {
@@ -53,7 +54,9 @@
   {% csrf_token %}
 
   <div class="modal-header">
-    <h5 id="documentacao" class="modal-title">{% if documento %}Editar{% else %}Adicionar{% endif %} Documento</h5>    
+    <h5 id="documentacao" class="modal-title">
+      {% if documento %}{% lng "Editar" "Edit" %}{% else %}{% lng "Adicionar" "Add" %}{% endif %} {% lng "Documento" "Document" %}
+    </h5>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -64,7 +67,7 @@
     <div class="mb-3 row text-nowrap text-truncate">
       {% if projeto %}
         <div class="col-sm form-label" style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">
-          <span for="organizacao">Organização:</span>
+          <span for="organizacao">{% lng "Organização" "Organization" %}:</span>
           <input type="hidden" id="organizacao" name="organizacao" value="{{projeto.organizacao.id}}"/>
           {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
           <a href="{% url 'organizacao_completo' projeto.organizacao.id %}">
@@ -76,7 +79,7 @@
         </div>
       {% elif organizacao %}
         <div class="col-sm form-label" style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">
-          <span for="organizacao">Organização:</span>
+          <span for="organizacao">{% lng "Organização" "Organization" %}:</span>
           <input type="hidden" id="organizacao" name="organizacao" value="{{organizacao.id}}"/>
           {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
             <a href="{% url 'organizacao_completo' organizacao.id %}">
@@ -87,7 +90,7 @@
           {% endif %}
         </div>
       {% else %}
-        <label for="organizacao" class="col1 col-form-label d-inline-block" style="overflow: clip; overflow-clip-margin: 0.1em;">Empresa</label>
+        <label for="organizacao" class="col1 col-form-label d-inline-block" style="overflow: clip; overflow-clip-margin: 0.1em;">{% lng "Organização" "Organization" %}</label>
         <div class="col2">
           <select id="organizacao" name="organizacao" class="form-control d-inline-block">
             <option selected value> -- selecione uma organização -- </option>
@@ -104,7 +107,7 @@
     <div class="mb-3 row text-nowrap text-truncate">
       {% if projeto %}
         <div class="col-sm form-label" style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">
-          <span for="projeto">Projeto:</span>
+          <span for="projeto">{% lng "Projeto" "Project" %}:</span>
           <input type="hidden" id="projeto" name="projeto" value="{{projeto.id}}"/>
           {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
             <a href="{% url 'projeto_infos' projeto.id %}">
@@ -115,7 +118,7 @@
           {% endif %}
         </div>
       {% else %}
-        <label for="projeto" class="col1 col-form-label" style="overflow: clip; overflow-clip-margin: 0.1em;">Projeto</label>
+        <label for="projeto" class="col1 col-form-label" style="overflow: clip; overflow-clip-margin: 0.1em;">{% lng "Projeto" "Project" %}</label>
         <div class="col2 d-inline-block">
           <select id="projeto" name="projeto" class="form-control d-inline-block">
             <option selected value> -- selecione um projeto -- </option>
@@ -133,7 +136,7 @@
     <div class="mb-3 row text-truncate">
       {% if tipo %}
         <div class="col-sm form-label">
-          <span for="tipo_documento">Tipo:</span>
+          <span for="tipo_documento">{% lng "Tipo" "Type" %}:</span>
           <input type="hidden" id="tipo_documento" name="tipo_documento" value="{{tipo.id}}"/>
           {{tipo.nome}}
         </div>
@@ -155,7 +158,7 @@
     <div class="mb-3 row text-truncate">
       {% if travado %}
         <div class="col-sm form-label">
-          <label>Data:</label> <span id="datetime"></span>
+          <label>{% lng "Data" "Date" %}:</label> <span id="datetime"></span>
         </div>
         <script>
           function updateDateTime() {
@@ -166,7 +169,7 @@
           setInterval(updateDateTime, 1000);
         </script>
       {% else %}
-        <label for="data" class="col1 col-form-label">Data</label>
+        <label for="data" class="col1 col-form-label">{% lng "Data" "Date" %}</label>
         <div class="col2">
           <input id="data" class="form-control" type="datetime-local" name="data" value="{{data|date:'Y-m-d\TH:i'}}">
         </div>
@@ -175,7 +178,7 @@
 
     {% if not tipo or tipo and tipo.arquivo %}
       <div class="mb-3 row text-truncate">
-        <label for="arquivo" class="col1 col-form-label" style="overflow: clip; overflow-clip-margin: 0.5em;">Arquivo</label>
+        <label for="arquivo" class="col1 col-form-label" style="overflow: clip; overflow-clip-margin: 0.5em;">{% lng "Arquivo" "File" %}</label>
         <div class="col2">
           <input {% if not documento %}required{% endif %} id="arquivo" type="file" name="arquivo" class="form-control" style="border: 0px; padding-left: 0px;"
             {% include "formatos_suportados.html" %}>
@@ -215,18 +218,18 @@
     {% endif %}
 
     <div class="mb-3 row text-truncate">
-      <label for="lingua_do_documento" class="col1 col-form-label" style="overflow: clip; overflow-clip-margin: 0.2em;">Língua</label>
+      <label for="lingua_do_documento" class="col1 col-form-label" style="overflow: clip; overflow-clip-margin: 0.2em;">{% lng "Língua" "Language" %}</label>
       <div class="col2">
         <select id="lingua_do_documento" name="lingua_do_documento" class="form-control" required="required" >
-          <option value="portugues" {% if lingua == 0 %}selected="selected"{% endif %}>Português</option>
-          <option value="ingles" {% if lingua == 1 %}selected="selected"{% endif %}>Inglês</option>
+          <option value="portugues" {% if lingua == 0 %}selected="selected"{% endif %}>{% lng "Português" "Portuguese" %}</option>
+          <option value="ingles" {% if lingua == 1 %}selected="selected"{% endif %}>{% lng "Inglês" "English" %}</option>
         </select>
       </div>
     </div>
 
     {% if not travado %}
       <div class="mb-3 row text-truncate">
-        <label for="anotacao" class="col1 col-form-label" style="overflow: clip; overflow-clip-margin: 0.0em;">Anotação</label>
+        <label for="anotacao" class="col1 col-form-label" style="overflow: clip; overflow-clip-margin: 0.0em;">{% lng "Anotação" "Annotation" %}</label>
         <div class="col2">
           <input class="form-control" type="text" style="display: block;" size="73" 
                  maxlength="{% max_length Documento "anotacao" %}" id="anotacao" name="anotacao"
@@ -239,14 +242,16 @@
     {% if not travado %}
       <div class="form-check">
         <input class="form-check-input" type="checkbox" id="confidencial" name="confidencial" value="true" checked>
-        <label class="form-check-label" for="confidencial">Confidencial</label>
+        <label class="form-check-label" for="confidencial">{% lng "Confidencial" "Classified" %}</label>
       </div>
     {% endif %}
 
   </div>
 
   <div class="modal-footer">    
-    <div id="carregando_arquivo" style="float: left; display: none;">Carregando arquivo... <div class="carregando"></div></div>
+    <div id="carregando_arquivo" style="float: left; display: none;">{% lng "Carregando arquivo..." "Loading file..." %}
+      <div class="carregando"></div>
+    </div>
     <button type="button" class="btn btn-secondary mb-1" data-dismiss="modal">Fechar</button>
     <button id="atualiza" type="submit" class="btn btn-primary mb-1">Enviar</button>
   </div>
