--- a/projetos/templates/projetos/despesas.html
+++ b/projetos/templates/projetos/despesas.html
@@ -16,7 +16,7 @@
     <span class="esconder">
       <a href="#"
       class="open-modal" style="cursor:pointer;"
-      data-url="{% url 'adiciona_documento' %}">
+      data-url="{% url 'adiciona_despesa' %}">
         <i class="fas fa-plus"></i> 
         {% lng "Cadastrar Nova Despesa" "Register New Expense" %}
       </a>
