--- a/projetos/templates/projetos/despesas.html
+++ b/projetos/templates/projetos/despesas.html
@@ -53,6 +53,44 @@
     {% endfor %}
   {% include "tabelas_bottom.html" %}
 
+  {% comment %} Exibir cotação do dollar usada como referência {% endcomment %}
+  {% if configuracao.cotacao_dolar %}
+    <div class="alert alert-info" role="alert" style="display: inline-block;">
+      <strong>{% lng "Cotação do Dólar" "Dollar Exchange Rate" %}:</strong>
+      1 US$ = R$ {{configuracao.cotacao_dolar|floatformat:2}}
+    </div><br>
+  {% endif %}
+
+  {% comment %} Mostra uma tabela com a somatória dos valores das despesas agrupadas por tipo de despesa. {% endcomment %}
+  {% if user.admin %}
+    <div class="card" style="display: inline-block;">
+      <div class="card-header">
+        <h5 class="card-title mb-0">
+          {% lng "Despesas por Tipo" "Expenses by Type" %}
+        </h5>
+      </div>
+      <div class="card-body">
+        <table class="table table-striped table-hover table-sm">
+          <thead>
+            <tr>
+              <th>{% lng "Tipo de Despesa" "Expense Type" %}</th>
+              <th>{% lng "Total" "Total" %}</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for tipo, valor_r in despesa_por_tipo.items %}
+              <tr>
+                <td>{{tipo}}</td>
+                <td>R$ {{valor_r|floatformat:2}}</td>
+              </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+    </div>
+  {% endif %}
+
+
   <script>
     function carrega_pagina(){
       {% include "tabelas_scripts.html" with tabela="Despesas" %}
