--- a/projetos/templates/projetos/despesas.html
+++ b/projetos/templates/projetos/despesas.html
@@ -34,8 +34,8 @@
           {{despesa.data|date:"d/m/Y"}}
         </td>
         <td style="white-space: nowrap;">
-          {% if despesa.valor_r %}R$ {{despesa.valor_r|floatformat:2}}{% endif %}
-          {% if despesa.valor_d %}US$ {{despesa.valor_d|floatformat:2}}{% endif %}
+          {% if despesa.valor_r %}R$ {% lng_2 despesa.valor_r %}{% endif %}
+          {% if despesa.valor_d %}US$ {% lng_2 despesa.valor_d %}{% endif %}
         </td>
         <td>{% if despesa.descricao %}{{despesa.descricao}} {% endif %}</td>
         <td>{% if despesa.fornecedor %}{{despesa.fornecedor}} {% endif %}</td>
@@ -57,7 +57,7 @@
   {% if configuracao.cotacao_dolar %}
     <div class="alert alert-info" role="alert" style="display: inline-block;">
       <strong>{% lng "Cotação do Dólar" "Dollar Exchange Rate" %}:</strong>
-      1 US$ = R$ {{configuracao.cotacao_dolar|floatformat:2}}
+      1 US$ = R$ {% lng_2 configuracao.cotacao_dolar %}
     </div><br>
   {% endif %}
 
@@ -81,7 +81,10 @@
             {% for tipo, valor_r in despesa_por_tipo.items %}
               <tr>
                 <td>{{tipo}}</td>
-                <td>R$ {{valor_r|floatformat:2}}</td>
+                <td style="white-space: nowrap; text-align: right;"
+                    data-sort="{{valor_r}}">
+                    R$ {% lng_2 valor_r %}
+                </td>
               </tr>
             {% endfor %}
           </tbody>
