--- a/professores/templates/professores/includes/ver_pastas_projeto.html
+++ b/professores/templates/professores/includes/ver_pastas_projeto.html
@@ -10,7 +10,7 @@
 {% if projeto.pastas_do_projeto %}
   <div class="mt-1">
     <b>{% lng "Pastas do projeto" "Project repositories" %}:</b>
-    <div style="display: flex; align-items: flex-start;">
+    <div style="display: flex; align-items: flex-start; padding-left: 18px;">
       <div>&#128193;&nbsp;</div>
       <div>{{projeto.pastas_do_projeto|linebreaks|bleach_urlize|safe}}</div>
     </div>
