--- a/projetos/templates/projetos/projeto_infos.html
+++ b/projetos/templates/projetos/projeto_infos.html
@@ -403,9 +403,11 @@
       {% include "documentos.html" %}
     </div>
   {% endif %}
-
-  {% include "professores/includes/ver_site.html" %}
-  {% include "professores/includes/ver_pastas_projeto.html" %}
+  
+  <div class="mt-3">
+    {% include "professores/includes/ver_site.html" %}
+    {% include "professores/includes/ver_pastas_projeto.html" %}
+  </div>
 
   {% if user.prof_a %}
     <hr>
