--- a/administracao/templates/administracao/versoes_sistema.html
+++ b/administracao/templates/administracao/versoes_sistema.html
@@ -14,7 +14,7 @@
         <b>{{ tipo }}</b>: {{ versao }}<br>
     {% endfor %}
     <br><br>
-    <b>{% lng "Pacotes" "Packages" %}</b><br>
+    <b>{% lng "Pacotes Python" "Python Packages" %}</b><br>
     {% for pacote, versao in pacotes.items %}
         {{ pacote }}: {{ versao }}<br>
     {% endfor %}
