deixar o aviso de erro em vermelho

--- a/estudantes/templates/estudantes/relato_quinzenal.html
+++ b/estudantes/templates/estudantes/relato_quinzenal.html
@@ -129,7 +129,7 @@
        ">
       <button type="button" id="feedback-validator" class="feedback-validator btn mb-1 mt-4">
         <i class="fas fa-check-circle" style="display: none;"></i>
-        <i class="fas fa-exclamation-triangle" style="display: none;"></i>
+        <i class="fas fa-exclamation-triangle" style="display: none; color: red;"></i>
         <i class="fas fa-hourglass fa-spin" style="display: none;"></i>
         {% lng "como estou escrevendo" "how am I writing" %}?<br>
         <span class="by-name">{% lng "IA por" "AI by" %}</span>
