se tudo certo, verde

--- a/professores/templates/professores/relato_avaliar.html
+++ b/professores/templates/professores/relato_avaliar.html
@@ -109,7 +109,7 @@
               O uso do sistema é de responsabilidade do próprio usuário, e o sistema não se responsabiliza por eventuais erros que possam ocorrer.
             ">
             <button type="button" id="feedback-validator_{{relato.id}}" class="feedback-validator btn mb-1 mt-1">
-              <i class="fas fa-check-circle" style="display: none;"></i>
+              <i class="fas fa-check-circle" style="display: none; color: green;"></i>
               <i class="fas fa-exclamation-triangle" style="display: none; color: red;"></i>
               <i class="fas fa-hourglass fa-spin" style="display: none;"></i>
               {% lng "verificar conteúdo" "check content" %}!<br>
