--- a/administracao/templates/administracao/relatorio_alunos.html
+++ b/administracao/templates/administracao/relatorio_alunos.html
@@ -38,7 +38,7 @@
       <br>
       <strong>Projetos Selecionados</strong>
       {% for opcao in aluno.opcao_set.all %}
-        {% if opcao.projeto.ano == opcao.aluno.anoPFE and opcao.projeto.semestre == opcao.aluno.semestrePFE %}
+        {% if opcao.projeto.ano == opcao.aluno.ano and opcao.projeto.semestre == opcao.aluno.semestre %}
             <a href="{% url 'projeto_infos' opcao.projeto.id %}">
                 <p style="margin-top: 0px; margin-bottom: 0px;"><b>{{opcao.prioridade}}</b> - 
                     {{opcao.projeto.organizacao.nome}}, {{opcao.projeto.get_titulo}} 
