tratando caso de repositório inválido

--- a/administracao/templates/administracao/lista_git.html
+++ b/administracao/templates/administracao/lista_git.html
@@ -35,23 +35,27 @@
             [<a href="{% url 'organizacao_completo' projeto.organizacao.id %}">{{ projeto.organizacao.sigla }}</a>]
             <a href="{% url 'projeto_infos' projeto.id %}">{{projeto.get_titulo}}</a>
           </td>
-          <td><a href="{{ repositorio.html_url }}" target="_blank">{{ repositorio.name }}</a></td>
-          {% comment %} <td>{{ repositorio.private }}</td> {% endcomment %}
-          <td>{{ repositorio.visibility }}</td>
-          <td>{{ repositorio.created_at|date:"d/m/Y H:i:s" }}</td>
-          <td>{{ repositorio.updated_at|date:"d/m/Y H:i:s" }}</td>
-          <td class="text-right">{% lng_0 repositorio.size %}</td>
-          <td class="text-right">{{ repositorio.stargazers_count }}</td>
-          <td>{% if repositorio.language %}{{ repositorio.language }}{% else %}N/A{% endif %}</td>
-          {% comment %} <td><a href="{{ repositorio.contributors_url }}" target="_blank">{{ repositorio.contributors_url }}</a></td> {% endcomment %}
-          {% comment %} {% if forloop.first %} {% endcomment %}
-            <td>
-              {% for usuario, dados in repositorio.contributors_url|contributor %}
-                &bull;<a href="{{dados.html_url}}">{{usuario}}</a>{% with us=usuario|git_usuario %}{% if us %}&nbsp;(<a class="imprimir" href="{% url 'user_detail' us.id %}">{{ us.get_full_name }}</a>){% endif %}{% endwith %}:&nbsp;{{dados.contributions}}&nbsp;commits<br>
-              {% endfor %}
-            </td>
-          {% comment %} {% endif %} {% endcomment %}
-          {% comment %} <td><a href="{{ repositorio.commits_url }}" target="_blank">{{ repositorio.commits_url }}</a></td> {% endcomment %}
+          {% if repositorio.message %}
+            <td colspan="8">{{ repositorio.message }}</td>
+          {% else %}
+            <td><a href="{{ repositorio.html_url }}" target="_blank">{{ repositorio.name }}</a></td>
+            {% comment %} <td>{{ repositorio.private }}</td> {% endcomment %}
+            <td>{{ repositorio.visibility }}</td>
+            <td>{{ repositorio.created_at|date:"d/m/Y H:i:s" }}</td>
+            <td>{{ repositorio.updated_at|date:"d/m/Y H:i:s" }}</td>
+            <td class="text-right">{% lng_0 repositorio.size %}</td>
+            <td class="text-right">{{ repositorio.stargazers_count }}</td>
+            <td>{% if repositorio.language %}{{ repositorio.language }}{% else %}N/A{% endif %}</td>
+            {% comment %} <td><a href="{{ repositorio.contributors_url }}" target="_blank">{{ repositorio.contributors_url }}</a></td> {% endcomment %}
+            {% comment %} {% if forloop.first %} {% endcomment %}
+              <td>
+                {% for usuario, dados in repositorio.contributors_url|contributor %}
+                  &bull;<a href="{{dados.html_url}}">{{usuario}}</a>{% with us=usuario|git_usuario %}{% if us %}&nbsp;(<a class="imprimir" href="{% url 'user_detail' us.id %}">{{ us.get_full_name }}</a>){% endif %}{% endwith %}:&nbsp;{{dados.contributions}}&nbsp;commits<br>
+                {% endfor %}
+              </td>
+            {% comment %} {% endif %} {% endcomment %}
+            {% comment %} <td><a href="{{ repositorio.commits_url }}" target="_blank">{{ repositorio.commits_url }}</a></td> {% endcomment %}
+          {% endif %}
         </tr>
       {% endfor %}
     </tbody>
