--- a/templates/botao_lingua.html
+++ b/templates/botao_lingua.html
@@ -6,8 +6,8 @@
 </div>
 
 <script>
-  $('#toggle-event').click(function () {
-    if($(this).hasClass('active')){
+  $("#toggle-event").click(function () {
+    if($(this).hasClass("active")){
       $('[lang="pt"]').show();
       $('[lang="en"]').hide();
     } else {
