--- a/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
+++ b/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
@@ -357,7 +357,7 @@
           </script>
         </div>
 
-        <div class="flex-item">
+        <div class="flex-item mt-2">
           <div class="table-responsive">
             <div style="position: relative; height:260px; width:590px; max-width: 100%">
               <canvas id="projetos"></canvas>
@@ -371,7 +371,9 @@
 
       var datasets = [
         {
-          label: "Confirmados",
+          {% comment %} label: "Confirmados", {% endcomment %}
+          label_pt: "Confirmados",
+          label_en: "Confirmed",
           organizacoes: orgs_confirmadas,
           backgroundColor: "lightgreen",
           borderColor: "grey",
@@ -382,7 +384,9 @@
           categoryPercentage: 0.4
         },
         {
-          label: "Interessados",
+          {% comment %} label: "Interessados", {% endcomment %}
+          label_pt: "Interessados",
+          label_en: "Interested",
           organizacoes: orgs_interessados,
           backgroundColor: "lemonchiffon",
           borderColor: "grey",
@@ -393,7 +397,9 @@
           categoryPercentage: 0.4
         },
         {
-          label: "Sondados",
+          {% comment %} label: "Sondados", {% endcomment %}
+          label_pt: "Sondados",
+          label_en: "Sounded",
           organizacoes: org_sondados,
           backgroundColor: "lightblue",
           borderColor: "grey",
@@ -404,8 +410,10 @@
           categoryPercentage: 0.4
         },
         {
-          label: "Necessários",
-          backgroundColor: "rgba(255, 205, 87, 0.4)",
+          {% comment %} label: "Necessários", {% endcomment %}
+          label_pt: "Necessários",
+          label_en: "Necessary",
+          backgroundColor: "rgba(216, 119, 203, 0.4)",
           borderWidth: 1,
           data: [{% for curso in cursos %}{{necessarios|get_value:curso|unlocalize}}, {% endfor %}],
           xAxisID: "bar-x-necessario",
@@ -422,7 +430,9 @@
       var options = {
         title: {
             display: true,
-            text: "Previsão de Propostas por Curso",
+            text_pt: "Previsão de Propostas por Curso",
+            text_en: "Proposal Forecast by Course",
+            {% comment %} text: null, {% endcomment %}
             position: "top"
         },
         legend: {
@@ -445,7 +455,9 @@
             ticks: {beginAtZero: true},
             scaleLabel: {
               display: true,
-              labelString: "propostas",
+              {% comment %} labelString: "propostas", {% endcomment %}
+              labelString_pt: "propostas",
+              labelString_en: "proposals"
             }
           }]
         },
@@ -470,11 +482,33 @@
       };
       
       var ctx = document.getElementById("projetos").getContext("2d");
-      var myBarChart = new Chart(ctx, {
+      window.myBarChart = new Chart(ctx, {
         type: "bar",
         data: data,
         options: options
       });
+
+      function lingua_grafico() {
+        if(localStorage.getItem("lingua") == "pt") {
+          window.myBarChart.options.title.text = window.myBarChart.options.title.text_pt;
+          window.myBarChart.options.scales.yAxes[0].scaleLabel.labelString = window.myBarChart.options.scales.yAxes[0].scaleLabel.labelString_pt;
+          window.myBarChart.data.datasets[0].label = window.myBarChart.data.datasets[0].label_pt;
+          window.myBarChart.data.datasets[1].label = window.myBarChart.data.datasets[1].label_pt;
+          window.myBarChart.data.datasets[2].label = window.myBarChart.data.datasets[2].label_pt;
+          window.myBarChart.data.datasets[3].label = window.myBarChart.data.datasets[3].label_pt;
+        } else {
+          window.myBarChart.options.title.text = window.myBarChart.options.title.text_en;
+          window.myBarChart.options.scales.yAxes[0].scaleLabel.labelString = window.myBarChart.options.scales.yAxes[0].scaleLabel.labelString_en;
+          window.myBarChart.data.datasets[0].label = window.myBarChart.data.datasets[0].label_en;
+          window.myBarChart.data.datasets[1].label = window.myBarChart.data.datasets[1].label_en;
+          window.myBarChart.data.datasets[2].label = window.myBarChart.data.datasets[2].label_en;
+          window.myBarChart.data.datasets[3].label = window.myBarChart.data.datasets[3].label_en;
+        }
+        window.myBarChart.update();
+      }
+      lingua_grafico();
+      document.addEventListener("languageChanged", lingua_grafico);
+
     </script>
 
   </div>
