--- a/users/templates/users/estudantes_lista.html
+++ b/users/templates/users/estudantes_lista.html
@@ -200,14 +200,16 @@
             data: [{% for num in num_estudantes.values %}{{num}},{% endfor %}],
             backgroundColor: [{% for curso, num in num_estudantes.items %}"#{{curso.cor}}",{% endfor %}]
           }],
-          labels: [{% for curso, num in num_estudantes.items %}"{{curso.nome}} [{% widthratio num total_estudantes 100 %}%]",{% endfor %}]
+          labels_pt: [{% for curso, num in num_estudantes.items %}"{{curso.nome}} [{% widthratio num total_estudantes 100 %}%]",{% endfor %}],
+          labels_en: [{% for curso, num in num_estudantes.items %}"{{curso.nome_en}} [{% widthratio num total_estudantes 100 %}%]",{% endfor %}]
         },
         options: {
           responsive: true,
           maintainAspectRatio: false,
           title: {
             display: true,
-            text: "Proporção de cursos entre estudantes",
+            text_pt: "Proporção de cursos entre estudantes",
+            text_en: "Courses ration among students",
             position: "top"
           },
           legend: {
@@ -224,9 +226,13 @@
             data: [{{ num_alunos.M }}, {{ num_alunos.F }}],
             backgroundColor: ["#5DACE2", "#AF7AC5"]
           }],
-          labels: [
+          labels_pt: [
             "Masculino [{% widthratio num_alunos.M total_estudantes 100 %}%]",
             "Feminino [{% widthratio num_alunos.F total_estudantes 100 %}%]"
+          ],
+          labels_en: [
+            "Male [{% widthratio num_alunos.M total_estudantes 100 %}%]",
+            "Female [{% widthratio num_alunos.F total_estudantes 100 %}%]"
           ]
         },
         options: {
@@ -234,7 +240,8 @@
           maintainAspectRatio: false,
           title: {
             display: true,
-            text: "Proporção de gêneros entre estudantes",
+            text_pt: "Proporção de gêneros entre estudantes",
+            text_en: "Gender ratio among students", 
             position: "top"
           },
           legend: {
@@ -276,7 +283,8 @@
           maintainAspectRatio: false,
           title: {
             display: true,
-            text: "Estudantes por curso por semestre",
+            text_pt: "Estudantes por curso por semestre",
+            text_en: "Students by course by semester",
             position: "top"
           },
           legend: {
@@ -308,6 +316,33 @@
         var chart_totais = document.getElementById("total-estudantes").getContext("2d");
         window.myPie_totais = new Chart(chart_totais, config_totais);
       {% endif %}
+
+      function lingua_grafico() {
+        if(localStorage.getItem("lingua") == "pt") {
+          window.myPie_programas.options.title.text = window.myPie_programas.options.title.text_pt;
+          window.myPie_genero.options.title.text = window.myPie_genero.options.title.text_pt;
+          window.myPie_programas.data.labels = window.myPie_programas.data.labels_pt;
+          window.myPie_genero.data.labels = window.myPie_genero.data.labels_pt;
+          {% if ano == 0 or semestre == 0 %}
+            window.myPie_totais.options.title.text = window.myPie_totais.options.title.text_pt;
+          {% endif %}
+        } else {
+          window.myPie_programas.options.title.text = window.myPie_programas.options.title.text_en;
+          window.myPie_genero.options.title.text = window.myPie_genero.options.title.text_en;
+          window.myPie_programas.data.labels = window.myPie_programas.data.labels_en;
+          window.myPie_genero.data.labels = window.myPie_genero.data.labels_en;
+          {% if ano == 0 or semestre == 0 %}
+            window.myPie_totais.options.title.text = window.myPie_totais.options.title.text_en;
+          {% endif %}
+        }
+        window.myPie_programas.update();
+        window.myPie_genero.update();
+        {% if ano == 0 or semestre == 0 %}
+          window.myPie_totais.update();
+        {% endif %}
+      }
+      lingua_grafico();
+      document.addEventListener("languageChanged", lingua_grafico);
 
       var table = null;
 
