--- a/templates/projeto.html
+++ b/templates/projeto.html
@@ -122,7 +122,7 @@
     <textarea id="pastas_do_projeto" name="pastas_do_projeto" rows="6" maxlength="{% max_length Projeto 'pastas_do_projeto' %}"
     >{% if alocado.projeto.pastas_do_projeto %}{{alocado.projeto.pastas_do_projeto}}{% endif %}</textarea>
     <div style="font-size: 12px; line-height:1.0;">
-      {% lng "Links para repositórios com dados/códigos dos projeto (para orientador acessar / mantenha privado)" "Links to repositories with project data/code (for advisor access / keep private)" %}
+      {% lng "Links para repositórios com dados/códigos dos projeto (para orientador acessar / mantenha privado se não tiver autorização da organização parceira para deixar público)" "Links to repositories with project data/code (for advisor access / keep private if you do not have authorization from the partner organization to make it public)" %}
     </div>
 
     <div class="text-right">
